# SandBox

./: CMakeLists.txt
Barkochba/: .clang-format  CMakeLists.txt
Barkochba/include/: node.h  qmaster.h
Barkochba/src/: main.cpp  qmaster.cpp
SandBox/: .clang-format  CMakeLists.txt  todo.txt
SandBox/include/: field.h  flammable.h  gas.h  immoveable.h  liquid.h  material.h  particle.h  particles.h  solid.h  util.h
SandBox/src/: flammable.cpp  gas.cpp  immoveable.cpp  liquid.cpp  main.cpp  particle.cpp  particles.cpp  solid.cpp
include/: field.h  material.h  particle.h  particles.h  util.h
src/: main.cpp  particle.cpp  particles.cpp
